--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "sass": "^1.48.0",
     "vue": "^2.6.11",
     "vue-ctk-date-time-picker": "^2.5.0",
     "vue-router": "^3.2.0",
     "vue-toastification": "^1.7.11",
+    "vue2-editor": "^2.10.3",
     "vuetify": "^2.4.10",
     "vuetify-datetime-picker": "^2.1.1",
     "vuex": "^3.4.0"
